add admin controller p.1
